# test_item

./: CMakeLists.txt  Info.json  main.cpp
Core/: CMakeLists.txt
Core/Inc/: ClimateDataHandler.h  CommandDataHandler.h  CommandDataSender.h  CoreController.h  DataHandler.h  Sensor.h  SensorAirPressure.h  SensorCommandHandler.h  SensorHighWind.h  SensorHumidity.h  SensorInfraredLandTemperature.h  SensorLowWind.h  SensorSkipBucketRain.h  SensorSoilMoisture.h  SensorSoilTemperature.h  SensorTemperature.h  SensorWeighRain.h  Timer.h  Watchdog.h
Core/Src/: ClimateDataHandler.cpp  CommandDataHandler.cpp  CoreController.cpp  DataHandler.cpp  Sensor.cpp  SensorAirPressure.cpp  SensorCommandHandler.cpp  SensorHighWind.cpp  SensorHumidity.cpp  SensorInfraredLandTemperature.cpp  SensorLowWind.cpp  SensorSkipBucketRain.cpp  SensorSoilMoisture.cpp  SensorSoilTemperature.cpp  SensorTemperature.cpp  SensorTotalRadiation.cpp  SensorWeighRain.cpp  Timer.cpp  Watchdog.cpp
Hardware/: CMakeLists.txt
Hardware/Inc/: Ethernet.h  Uart.h  UartUser.h
Hardware/Src/: Ethernet.cpp  Uart.cpp  UartUser.cpp
Storage/: CMakeLists.txt
Storage/Inc/: DataHandler.h  DataStorageUnit.h
Storage/Src/: DataHandler.cpp  DataStorageUnit.cpp
